--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -379,11 +379,11 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"cost"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "당신이 갱단에 속할 때 갱 채팅이 가능합니다",
+ 	 	 	 	 	"trans": "갱 채팅은 당신이 갱단에 속할 때 활성화됩니다. 채팅에서 친구를 사귀어 갱단에 가입하거나, 당신만의 갱단을 만들어 친구들을 초대해 보세요!",
  	 	 	 	 	"eng": "gang chat will be enabled when you belong to a gang.\\njoin a gang by making friends in global chat or create your own gang and invite your friends!"
  	 	 	 	},
  	 	 	 	"createButton": {
- 	 	 	 	 	"trans": "갱을 만드십시오",
+ 	 	 	 	 	"trans": "갱 만들기",
  	 	 	 	 	"eng": "Create gang"
  	 	 	 	},
  	 	 	 	"createButtonDescription": {
@@ -391,7 +391,7 @@
  	 	 	 	 	 	"cost",
  	 	 	 	 	 	"currency"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${cost} ${currency}에 대한 갱단 만들기",
+ 	 	 	 	 	"trans": "${cost} ${currency}를 지불하여 갱을 창단합니다.",
  	 	 	 	 	"eng": "Create a gang for ${cost} ${currency}"
  	 	 	 	}
  	 	 	}
@@ -680,7 +680,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"currentAction"
  	 	 	 	],
- 	 	 	 	"trans": "${currentAction} 동안 장비를 인쇄 할 수 없습니다",
+ 	 	 	 	"trans": "${currentAction} 동안 장비를 인쇄할 수 없습니다",
  	 	 	 	"eng": "You can't print equipment while ${currentAction}"
  	 	 	},
  	 	 	"printCache": {
@@ -688,7 +688,7 @@
  	 	 	 	"eng": "Print Cache"
  	 	 	},
  	 	 	"printCacheDescription": {
- 	 	 	 	"trans": "이 캐시를 UAE를 할 수있는 무기 또는 장비 품목으로 바꾸십시오.",
+ 	 	 	 	"trans": "이 캐시를 사용 가능한 무기나 장비로 인쇄합니다",
  	 	 	 	"eng": "Turn this cache into a weapon or equipment item that you can uae."
  	 	 	}
  	 	},
@@ -713,11 +713,11 @@
  	 	 	},
  	 	 	"noItem": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "더 이상이 항목이 없습니다",
+ 	 	 	 	 	"trans": "더 이상이 이 아이템을 가지고 있지 않습니다",
  	 	 	 	 	"eng": "You no longer have this item"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "다시 눌러 다시 인벤토리로 돌아갑니다",
+ 	 	 	 	 	"trans": "뒤로가기 버튼을 눌러 다시 인벤토리로 돌아갑니다",
  	 	 	 	 	"eng": "press back to go back to inventory"
  	 	 	 	}
  	 	 	}
@@ -916,7 +916,7 @@
  	 	 	 	 	"eng": "Give Street Cred"
  	 	 	 	},
  	 	 	 	"report": {
- 	 	 	 	 	"trans": "보고서 플레이어",
+ 	 	 	 	 	"trans": "신고하기",
  	 	 	 	 	"eng": "Report Player"
  	 	 	 	}
  	 	 	},
@@ -1476,7 +1476,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"percent"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${percent} % 확률로 강화가 실패합니다. 정말 강화하시겠습니까?",
+ 	 	 	 	 	"trans": "${percent} % 확률로 교정이 실패합니다. 정말 교정하시겠습니까?",
  	 	 	 	 	"eng": "Are you sure you want to calibrate this item with ${percent}% destructive failure chance?"
  	 	 	 	}
  	 	 	}
@@ -1873,7 +1873,7 @@
  	 	 	 	"eng": "Insert Core"
  	 	 	},
  	 	 	"activateDescription": {
- 	 	 	 	"trans": "장비를 강화하기 위해선 장비 교정 코어가 필요합니다",
+ 	 	 	 	"trans": "장비를 교정하기 위해선 장비 교정 코어가 필요합니다",
  	 	 	 	"eng": "A Calibration Core is required to calibrate equipment"
  	 	 	},
  	 	 	"activating": {
@@ -1897,7 +1897,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"selectEquipmentTitle": {
- 	 	 	 	"trans": "강화할 아이템을 선택하세요",
+ 	 	 	 	"trans": "교정할 아이템을 선택하세요",
  	 	 	 	"eng": "Please select an item to calibrate"
  	 	 	},
  	 	 	"upgradeButton": {
@@ -2558,7 +2558,7 @@
  	 	},
  	 	"upgradeChance": {
  	 	 	"name": {
- 	 	 	 	"trans": "강화 확률",
+ 	 	 	 	"trans": "교정 확률",
  	 	 	 	"eng": "Calibration Chance"
  	 	 	},
  	 	 	"description": {
@@ -2568,7 +2568,7 @@
  	 	},
  	 	"upgradeNoBreak": {
  	 	 	"name": {
- 	 	 	 	"trans": "강화 안전장치",
+ 	 	 	 	"trans": "교정 안전장치",
  	 	 	 	"eng": "Calibration Safety"
  	 	 	},
  	 	 	"description": {
@@ -4006,7 +4006,7 @@
  	 	},
  	 	"upgradeNoBreak": {
  	 	 	"name": {
- 	 	 	 	"trans": "강화 실패 무효화 나노봇",
+ 	 	 	 	"trans": "교정 실패 무효화 나노봇",
  	 	 	 	"eng": "Calibration Safety Nano Bots"
  	 	 	},
  	 	 	"description": {
@@ -4754,7 +4754,7 @@
  	 	"blackMarket": {
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"Hey kid, wanna make some quick bucks?"
+ 	 	 	 	 	"애송이가 한 녀석 더 왔군. 혹시 '신사임당' 좀 뽑아 줄까?"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Hey kid, wanna make some quick bucks?"
@@ -4765,7 +4765,7 @@
  	 	 	 	"eng": "Black Market"
  	 	 	},
  	 	 	"npcName": {
- 	 	 	 	"trans": "영",
+ 	 	 	 	"trans": "제로",
  	 	 	 	"eng": "Zero"
  	 	 	}
  	 	},
@@ -5162,19 +5162,19 @@
  	},
  	"reportPlayerType": {
  	 	"inappropriateLang": {
- 	 	 	"trans": "부적절한 언어",
+ 	 	 	"trans": "부적절한 언어 사용",
  	 	 	"eng": "Inappropriate Language"
  	 	},
  	 	"aggressiveBehavior": {
- 	 	 	"trans": "공격적인 행동",
+ 	 	 	"trans": "비매너 행동을 보임",
  	 	 	"eng": "Aggressive Behavior"
  	 	},
  	 	"spamming": {
- 	 	 	"trans": "스팸",
+ 	 	 	"trans": "스팸(도배)",
  	 	 	"eng": "Spamming"
  	 	},
  	 	"other": {
- 	 	 	"trans": "다른",
+ 	 	 	"trans": "기타",
  	 	 	"eng": "Other"
  	 	}
  	},
@@ -5196,23 +5196,23 @@
  	 	 	"eng": "Transaction Exploit"
  	 	},
  	 	"upgradeChance1": {
- 	 	 	"trans": "강화 정확도 (일반)",
+ 	 	 	"trans": "교정 정확도 (일반)",
  	 	 	"eng": "Calibration Precision (Common)"
  	 	},
  	 	"upgradeChance2": {
- 	 	 	"trans": "강화 정확도 (희귀)",
+ 	 	 	"trans": "교정 정확도 (희귀)",
  	 	 	"eng": "Calibration Precision (Rare)"
  	 	},
  	 	"upgradeChance3": {
- 	 	 	"trans": "강화 정확도 (전설)",
+ 	 	 	"trans": "교정 정확도 (전설)",
  	 	 	"eng": "Calibration Precision (Legendary)"
  	 	},
  	 	"upgradeChance4": {
- 	 	 	"trans": "강화 정확도 (프레스티지)",
+ 	 	 	"trans": "교정 정확도 (프레스티지)",
  	 	 	"eng": "Calibration Precision (Prestige)"
  	 	},
  	 	"upgradeNoBreak": {
- 	 	 	"trans": "강화 안전 나노봇",
+ 	 	 	"trans": "교정 안전 나노봇",
  	 	 	"eng": "Calibration Safety Nano Bot"
  	 	},
  	 	"pirate": {
@@ -5410,14 +5410,14 @@
  	 	},
  	 	"useItemWithExistingBuffModal": {
  	 	 	"title": {
- 	 	 	 	"trans": "이 항목을 사용 하시겠습니까?",
+ 	 	 	 	"trans": "정말로 이 아이템을 사용하시겠습니까?",
  	 	 	 	"eng": "Are you sure you want to use this item?"
  	 	 	},
  	 	 	"description": {
  	 	 	 	"vars": [
  	 	 	 	 	"remaining"
  	 	 	 	],
- 	 	 	 	"trans": "이 항목을 사용하면 현재 활성 버프의 타이머가 새로 고쳐지고 적용 가능한 경우 효과를 쌓을 수 있습니다. (${remaining})",
+ 	 	 	 	"trans": "이 아이템을 사용하면 현재 활성 버프의 타이머가 갱신되고, 가능한 경우 효과를 증가시킬 수 있습니다. (${remaining})",
  	 	 	 	"eng": "By using this item will refresh the timer of current active buff and stack the effect if applicable. (${remaining})"
  	 	 	},
  	 	 	"confirmText": {
@@ -5725,7 +5725,7 @@
  	 	 	 	"eng": "Block"
  	 	 	},
  	 	 	"report": {
- 	 	 	 	"trans": "보고 및 차단",
+ 	 	 	 	"trans": "신고 및 차단",
  	 	 	 	"eng": "Report and Block"
  	 	 	},
  	 	 	"openPlayerProfile": {
@@ -5997,21 +5997,21 @@
  	 	},
  	 	"gangShortNameInput": {
  	 	 	"title": {
- 	 	 	 	"trans": "갱 데이",
+ 	 	 	 	"trans": "갱 약칭",
  	 	 	 	"eng": "Gang Tag"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "채팅에 표시되는 짧은 태그",
+ 	 	 	 	"trans": "채팅에 표시되는 짧은 약칭",
  	 	 	 	"eng": "A short tag that will be displayed in chat"
  	 	 	}
  	 	},
  	 	"createButton": {
- 	 	 	"trans": "갱을 만드십시오",
+ 	 	 	"trans": "갱 창단",
  	 	 	"eng": "Create gang"
  	 	},
  	 	"error": {
  	 	 	"noNameOrShortName": {
- 	 	 	 	"trans": "이름과 태그를 입력하십시오",
+ 	 	 	 	"trans": "이름과 약칭을 입력하십시오",
  	 	 	 	"eng": "Please enter a name and a tag"
  	 	 	}
  	 	}
@@ -6027,30 +6027,30 @@
  	 	 	"vars": [
  	 	 	 	"playerName"
  	 	 	],
- 	 	 	"trans": "보고 ${playerName}",
+ 	 	 	"trans": "${playerName} 신고하기",
  	 	 	"eng": "reporting ${playerName}"
  	 	},
  	 	"description": {
- 	 	 	"trans": "보고서는 중재자에게 자동으로 전송됩니다. \\ n 보고서 시스템을 사용하여 오용, 스팸 또는 재생하지 마십시오",
+ 	 	 	"trans": "신고는 관리자에게 자동으로 전송됩니다. 신고를 오용하거나, 도배하거나, 장난치는 데 쓰지 마십시오.",
  	 	 	"eng": "Report will be sent to moderators automatically. \\nPlease do not misuses, spamming or play with the report system"
  	 	},
  	 	"textInput": {
  	 	 	"title": {
- 	 	 	 	"trans": "설명",
+ 	 	 	 	"trans": "사유",
  	 	 	 	"eng": "Description"
  	 	 	}
  	 	},
  	 	"report": {
- 	 	 	"trans": "보고 및 차단",
+ 	 	 	"trans": "신고 및 차단",
  	 	 	"eng": "report and block"
  	 	},
  	 	"error": {
  	 	 	"otherNoText": {
- 	 	 	 	"trans": "\"기타\"의 보고서 유형에는 설명이 필요합니다",
+ 	 	 	 	"trans": "\"기타\"로 신고할 경우에는 사유가 필요합니다",
  	 	 	 	"eng": "Report type of \"Other\" needs a description"
  	 	 	},
  	 	 	"noReportType": {
- 	 	 	 	"trans": "보고서 유형을 선택해야합니다",
+ 	 	 	 	"trans": "신고 유형을 선택해야합니다",
  	 	 	 	"eng": "You need to select a report type"
  	 	 	}
  	 	}
