--- a/contribution/lang/zh-TW.json
+++ b/contribution/lang/zh-TW.json
@@ -5816,7 +5816,7 @@
  	 	},
  	 	"chatMessage": {
  	 	 	"block": {
- 	 	 	 	"trans": "封鎖",
+ 	 	 	 	"trans": "襖鎖",
  	 	 	 	"eng": "Block"
  	 	 	},
  	 	 	"report": {
@@ -6156,7 +6156,7 @@
  	 	 	 	"trans": "邀請",
  	 	 	 	"eng": "Invite",
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "邀請其他球員加入您的公會。",
+ 	 	 	 	 	"trans": "邀請其他玩家加入您的公會。",
  	 	 	 	 	"eng": "Invite other players to join your gang."
  	 	 	 	}
  	 	 	},
@@ -6164,7 +6164,7 @@
  	 	 	 	"trans": "踢除",
  	 	 	 	"eng": "Kick",
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "從公會踢其他球員。",
+ 	 	 	 	 	"trans": "從公會踢其他玩家。",
  	 	 	 	 	"eng": "Kick other players from your gang."
  	 	 	 	}
  	 	 	},
