--- a/contribution/lang/zh-TW.json
+++ b/contribution/lang/zh-TW.json
@@ -5902,7 +5902,7 @@
  	 	 	 	"eng": "Player contributed content"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "你可以透過編輯 GitHub 頁面中的配置文件來貢獻這樣的內容。",
+ 	 	 	 	"trans": "你可以透過GitHub編輯或貢獻許多像這種文件",
  	 	 	 	"eng": "You can contribute to content like this and many more too by editing the config files in our GitHub page."
  	 	 	},
  	 	 	"confirm": {
