--- a/contribution/lang/ru.json
+++ b/contribution/lang/ru.json
@@ -24,7 +24,7 @@
  	"ui": {
  	 	"blackMarket": {
  	 	 	"selectItemButton": {
- 	 	 	 	"trans": "Распечатать и продайте",
+ 	 	 	 	"trans": "Распечатать и продать",
  	 	 	 	"eng": "Print And Sell"
  	 	 	}
  	 	},
@@ -196,7 +196,7 @@
  	 	 	 	"eng": "Withdraw"
  	 	 	},
  	 	 	"withdrawDesc": {
- 	 	 	 	"trans": "Вывести биткоины в банк",
+ 	 	 	 	"trans": "Вывести Биткоины из банка",
  	 	 	 	"eng": "Take Bitcoins out of bank"
  	 	 	},
  	 	 	"putItemToVault": {
@@ -365,7 +365,7 @@
  	 	},
  	 	"chatPreview": {
  	 	 	"notConnected": {
- 	 	 	 	"trans": "Чат Система не подключена",
+ 	 	 	 	"trans": "Система чата не подключена",
  	 	 	 	"eng": "chat system not connected"
  	 	 	}
  	 	},
@@ -436,7 +436,7 @@
  	 	 	 	"eng": "Increase your Printing Rank to create more powerful weapons by printing more caches"
  	 	 	},
  	 	 	"lowPrintLevelTip3": {
- 	 	 	 	"trans": "Или Auto Print и продажа ваших кэшей на черном рынке",
+ 	 	 	 	"trans": "Или путем автопечати и продажи ваших чертежей на Черном Рынке",
  	 	 	 	"eng": "Or by auto print and selling your caches in the Black Market"
  	 	 	},
  	 	 	"quickSlots": {
@@ -597,31 +597,31 @@
  	 	"communityItemLore": {
  	 	 	"noLoreButton": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Создать знание",
+ 	 	 	 	 	"trans": "Создать описание",
  	 	 	 	 	"eng": "Create Lore"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Пока нет общедоступной информации об этом предмете. Поделись знаниями?",
+ 	 	 	 	 	"trans": "У этого предмета нет описания от сообщества, создайте его первым.",
  	 	 	 	 	"eng": "There is no community lore for this item yet, be the first to create one for it."
  	 	 	 	}
  	 	 	},
  	 	 	"openButton": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Инфа для всех",
+ 	 	 	 	 	"trans": "Описание от сообщества",
  	 	 	 	 	"eng": "Community Lore"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Создай статью о предмете",
+ 	 	 	 	 	"trans": "Открыть описание предмета",
  	 	 	 	 	"eng": "Open the community lore for this item"
  	 	 	 	}
  	 	 	},
  	 	 	"editButton": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Отредактируй эту статью",
+ 	 	 	 	 	"trans": "Отредактировать это описание",
  	 	 	 	 	"eng": "edit this lore"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Редактировать эту общедоступную статью",
+ 	 	 	 	 	"trans": "Отредактируй это описание сообщества",
  	 	 	 	 	"eng": "Edit this community lore"
  	 	 	 	}
  	 	 	}
@@ -633,12 +633,12 @@
  	 	 	 	 	"eng": "Malfunctioned"
  	 	 	 	},
  	 	 	 	"instruction": {
- 	 	 	 	 	"trans": "Этот предмет сломан, отнеси его в оружейный магазин для ремонта",
+ 	 	 	 	 	"trans": "Этот предмет сломан, отнеси его в Оружейный Магазин для ремонта",
  	 	 	 	 	"eng": "This item is broken, bring it to Weapon Smith for repair"
  	 	 	 	}
  	 	 	},
  	 	 	"upgradeModuleTitle": {
- 	 	 	 	"trans": "Модули улучшения",
+ 	 	 	 	"trans": "Модуль улучшения ${index}",
  	 	 	 	"eng": "upgrade slot ${index}",
  	 	 	 	"vars": [
  	 	 	 	 	"index"
@@ -680,7 +680,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"currentAction"
  	 	 	 	],
- 	 	 	 	"trans": "Вы не можете печатать оборудование, пока ${currentAction}",
+ 	 	 	 	"trans": "Вы не можете печатать экипировку, пока ${currentAction}",
  	 	 	 	"eng": "You can't print equipment while ${currentAction}"
  	 	 	},
  	 	 	"printCache": {
@@ -688,7 +688,7 @@
  	 	 	 	"eng": "Print Cache"
  	 	 	},
  	 	 	"printCacheDescription": {
- 	 	 	 	"trans": "Превратите этот кэш в оружие или предмет оборудования, который вы можете.",
+ 	 	 	 	"trans": "Превратите этот кэш в оружие или предмет экипировки, который вы можете использовать.",
  	 	 	 	"eng": "Turn this cache into a weapon or equipment item that you can uae."
  	 	 	}
  	 	},
@@ -705,7 +705,7 @@
  	 	 	},
  	 	 	"factoryReset": {
  	 	 	 	"confirmation": {
- 	 	 	 	 	"trans": "Это приведет к сбросу всей калибровки твоего изделия. Это также сделает его снова доступным для продажи. \n       Ты уверен, что хочешь продолжить?",
+ 	 	 	 	 	"trans": "Это приведет к сбросу всей калибровки твоего предмета. Это также сделает его снова доступным для продажи. \n       Ты уверен, что хочешь продолжить?",
  	 	 	 	 	"eng": "Doing this will reset all calibration on your item. It will also make it tradable again. \r\n      Are you sure you want to proceed?"
  	 	 	 	},
  	 	 	 	"trans": "Сброс к заводским настройкам",
@@ -717,7 +717,7 @@
  	 	 	 	 	"eng": "You no longer have this item"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Нажмите назад, чтобы вернуться к инвентаризации",
+ 	 	 	 	 	"trans": "Нажмите назад, чтобы вернуться в инвентарь",
  	 	 	 	 	"eng": "press back to go back to inventory"
  	 	 	 	}
  	 	 	}
@@ -732,7 +732,7 @@
  	 	 	 	"eng": "You don't have any secret keys"
  	 	 	},
  	 	 	"noKeysSubtitle": {
- 	 	 	 	"trans": "Ты можешь получить секретные ключи из подземелий",
+ 	 	 	 	"trans": "Ты можешь получить секретные ключи из Подземелий",
  	 	 	 	"eng": "You can obtain secret keys from Dungeons"
  	 	 	}
  	 	},
@@ -757,7 +757,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"hiddenCount"
  	 	 	 	],
- 	 	 	 	"trans": "${hiddenCount} объектов Вы использовать не можете. Повысьте свой уровень.",
+ 	 	 	 	"trans": "В этом месте можно разблокировать еще ${hiddenCount} интерактивный(х) объект(ов), повышайте уровень, чтобы разблокировать их.",
  	 	 	 	"eng": "${hiddenCount} more interactables can be unlocked at this location, level up to unlock them."
  	 	 	},
  	 	 	"travel": {
@@ -767,7 +767,7 @@
  	 	},
  	 	"npc": {
  	 	 	"notUnlocked": {
- 	 	 	 	"trans": "Ещё не разблокировано, попробуй повысить уровень своего персонажа",
+ 	 	 	 	"trans": "Это ещё не разблокировано, попробуй повысить уровень своего персонажа",
  	 	 	 	"eng": "This is not unlocked yet, try leveling up your character"
  	 	 	},
  	 	 	"repairItems": {
@@ -787,7 +787,7 @@
  	 	 	 	 	 	"eng": "printing level ${level} equipments"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "Печать экипировки основана на вашем ранге печати, увеличьте свой ранг печати путем печати дополнительных предметов",
+ 	 	 	 	 	 	"trans": "Печать экипировки основана на вашем ранге печати, повышайте свой ранг печати, печатая больше предметов",
  	 	 	 	 	 	"eng": "equipment printing is based on your printing rank, level up your printing rank by printing more items"
  	 	 	 	 	}
  	 	 	 	}
@@ -808,7 +808,7 @@
  	 	 	 	"eng": "Skipping ${skipCount}"
  	 	 	},
  	 	 	"skipAvailable": {
- 	 	 	 	"trans": "Пропуск доступен",
+ 	 	 	 	"trans": "Доступен пропуск",
  	 	 	 	"eng": "Skip Available"
  	 	 	}
  	 	},
@@ -916,7 +916,7 @@
  	 	 	 	 	"eng": "Give Street Cred"
  	 	 	 	},
  	 	 	 	"report": {
- 	 	 	 	 	"trans": "Сообщить об игроке",
+ 	 	 	 	 	"trans": "Пожаловаться",
  	 	 	 	 	"eng": "Report Player"
  	 	 	 	}
  	 	 	},
@@ -958,7 +958,7 @@
  	 	 	},
  	 	 	"leaveDungeon": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Ты уверен, что хочешь выйти из этого подземелья?",
+ 	 	 	 	 	"trans": "Ты уверен, что хочешь покинуть это подземелье?",
  	 	 	 	 	"eng": "Are you sure you want to leave this dungeon?"
  	 	 	 	},
  	 	 	 	"subtitle": {
@@ -993,7 +993,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"nextSlotSize"
  	 	 	 	],
- 	 	 	 	"trans": "Потрать биткоин на расширение своего прилавка, так ты сможешь выставить на продажу больше вещей одновременно",
+ 	 	 	 	"trans": "Потрать биткоины на расширение своего прилавка, так ты сможешь выставить на продажу больше вещей одновременно",
  	 	 	 	"eng": "Spend Bitcoins to increase how many items you can put in your stall at the same time"
  	 	 	},
  	 	 	"cantEnterError": {
@@ -1041,11 +1041,11 @@
  	 	 	 	"eng": "The task will continue even if you close the game"
  	 	 	},
  	 	 	"syncing": {
- 	 	 	 	"trans": "Синхронизации",
+ 	 	 	 	"trans": "Синхронизация",
  	 	 	 	"eng": "Syncing"
  	 	 	},
  	 	 	"incompleteError": {
- 	 	 	 	"trans": "Пожалуйста, убедитесь, что время вашего устройства правильно.",
+ 	 	 	 	"trans": "Пожалуйста, убедитесь, что время вашего устройства настроенно правильно.",
  	 	 	 	"eng": "Please ensure your device time is correct."
  	 	 	},
  	 	 	"manualRefresh": {
@@ -1067,7 +1067,7 @@
  	 	 	 	"eng": "Are you sure you want to abort?"
  	 	 	},
  	 	 	"abortWarning": {
- 	 	 	 	"trans": "Если ты отменишь, то не получишь никакой награды, а использованные материалы не будут возвращены",
+ 	 	 	 	"trans": "Если ты прервешь, то не получишь никакой награды, а использованные материалы не будут возвращены",
  	 	 	 	"eng": "By aborting this you won\\'t receive any reward and the material used won\\'t be returned"
  	 	 	}
  	 	},
@@ -1084,7 +1084,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"points"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${points} Контроль занятий",
+ 	 	 	 	 	"trans": "${points} Оккупационный контроль",
  	 	 	 	 	"eng": "${points} Occupation Control"
  	 	 	 	}
  	 	 	}
@@ -1097,34 +1097,34 @@
  	 	 	 	},
  	 	 	 	"printingTooLow": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Улучшить ранжирование печати",
+ 	 	 	 	 	 	"trans": "Улучшить навык печати",
  	 	 	 	 	 	"eng": "Improve Printing Rank"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "Ранг печати определяет уровень, который вы печатаете. Printing Print Exp при печати и продаже на черном рынке",
+ 	 	 	 	 	 	"trans": "Навык печати определяет уровень предмета, который вы печатаете. Получайте опыт печати, печатая и продавая на черном рынке",
  	 	 	 	 	 	"eng": "Printing Rank determines the level of item you print. Gain printing exp by print & sell in Black Market"
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"gearTooWeak": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Получите еще лучшее оборудование!",
+ 	 	 	 	 	 	"trans": "Найдите снаряжение получше!",
  	 	 	 	 	 	"eng": "Get even better equipments!"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "Ваше текущее оборудование кажется ABIT устаревшим для вашего уровня, попробуйте печатать более сильные, чтобы заменить их",
+ 	 	 	 	 	 	"trans": "Ваше текущее снаряжение кажется немного устаревшим для вашего уровня, попробуйте напечатать снаряжение получше, чтобы заменить его.",
  	 	 	 	 	 	"eng": "Your current equipment seems abit outdated for your level, try printing stronger ones to replace them"
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"noUpgrade": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Обновите свое оборудование!",
+ 	 	 	 	 	 	"trans": "Обновите свое снаряжение!",
  	 	 	 	 	 	"eng": "Upgrade your equipment!"
  	 	 	 	 	},
  	 	 	 	 	"description": {
  	 	 	 	 	 	"vars": [
  	 	 	 	 	 	 	"itemName"
  	 	 	 	 	 	],
- 	 	 	 	 	 	"trans": "Вы можете обновить свое оборудование, используя ${itemName}",
+ 	 	 	 	 	 	"trans": "Вы можете обновить свое снаряжение, используя ${itemName}",
  	 	 	 	 	 	"eng": "You can upgrade your equipment by using the ${itemName}"
  	 	 	 	 	}
  	 	 	 	},
@@ -1134,17 +1134,17 @@
  	 	 	 	 	 	"eng": "Use AI Core"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "Похоже, у вас есть некоторые ядра Ai, используйте их, чтобы сделать AFK Auto выравнивание в соответствующей области уровня.",
+ 	 	 	 	 	 	"trans": "Похоже, у вас есть несколько ядер Ai, используйте их, для автоматического выравнивания уровня AFK в соответствующей области уровня.",
  	 	 	 	 	 	"eng": "Looks like you have some AI Cores, use them to do AFK auto leveling in appropriate level area."
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"noAiCore": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Приобретать ядер AI",
+ 	 	 	 	 	 	"trans": "Приобретение ядер AI",
  	 	 	 	 	 	"eng": "Acquire AI Cores"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "Вы можете получить ядра AI: \n         - Будучить в разных местах \n         - Ремесло с хеш-процессорами и технологическими отбросами \n         - грабеж от врагов во всех местах",
+ 	 	 	 	 	 	"trans": "Вы можете получить ядра AI: \n         - Будучить в разных локациях \n         - Крафт с хеш-процессорами и технологическим металлолом \n         - награда за победу над врагами во всех локациях",
  	 	 	 	 	 	"eng": "You may get AI Cores by: \r\n        - Scavenge in various locations\r\n        - Crafting with Hash Processors and Tech Scraps\r\n        - Looting from enemies in all locations"
  	 	 	 	 	}
  	 	 	 	},
@@ -1204,7 +1204,7 @@
  	 	},
  	 	"suspended": {
  	 	 	"title": {
- 	 	 	 	"trans": "Приостановленный",
+ 	 	 	 	"trans": "Приостановленно",
  	 	 	 	"eng": "Suspended"
  	 	 	},
  	 	 	"description": {
@@ -1221,7 +1221,7 @@
  	 	 	 	 	"eng": "1. You created multiple accounts to gain unfair advantage"
  	 	 	 	},
  	 	 	 	"3": {
- 	 	 	 	 	"trans": "2. Вы использовали какое-то автоматизированное программное обеспечение, чтобы получить несправедливое преимущество, такое как автозапись, боты и т. Д.",
+ 	 	 	 	 	"trans": "2. Вы использовали какое-то автоматизированное программное обеспечение, чтобы получить несправедливое преимущество, такое как автокликер, боты и т. Д.",
  	 	 	 	 	"eng": "2. You have used some kind of automated software to gain unfair advantage, such as autoclicker, bots, etc."
  	 	 	 	},
  	 	 	 	"4": {
@@ -1291,7 +1291,7 @@
  	 	},
  	 	"setting": {
  	 	 	"langWarning": {
- 	 	 	 	"trans": "Данный перевод находится в открытом доступе и был предоставлен нашими игроками. Скорее всего не завершен и содержит ошибки. Дополнить его можно на нашей странице GitHub",
+ 	 	 	 	"trans": "Данный перевод с открытым исходным кодом и добавлен нашими игроками, текст может быть переведен не полностью и может содержать ошибки. Пожалуйста, не стесняйтесь редактировать и вносить свой вклад с нашей страницы Github",
  	 	 	 	"eng": "This language pack is open source and contributed by our players, the text may not be fully translated and could contain mistakes. please feel free to edit and contribute from our Github page"
  	 	 	},
  	 	 	"langGithub": {
@@ -5308,7 +5308,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"remaining"
  	 	 	 	],
- 	 	 	 	"trans": "Используя этот элемент, обновит таймер текущего активного баффа и сложите эффект, если применимо. (${remaining})",
+ 	 	 	 	"trans": "Используя этот элемент, будет обновлен таймер текущего активного баффа и сложит эффект, если это возможно. (${remaining})",
  	 	 	 	"eng": "By using this item will refresh the timer of current active buff and stack the effect if applicable. (${remaining})"
  	 	 	},
  	 	 	"confirmText": {
@@ -5616,7 +5616,7 @@
  	 	 	 	"eng": "Block"
  	 	 	},
  	 	 	"report": {
- 	 	 	 	"trans": "Сообщить и блокировать",
+ 	 	 	 	"trans": "Пожаловаться и заблокировать",
  	 	 	 	"eng": "Report and Block"
  	 	 	},
  	 	 	"openPlayerProfile": {
@@ -5888,11 +5888,11 @@
  	 	},
  	 	"gangShortNameInput": {
  	 	 	"title": {
- 	 	 	 	"trans": "День банды",
+ 	 	 	 	"trans": "Девиз банды",
  	 	 	 	"eng": "Gang Tag"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Короткая метка, которая будет отображаться в чате",
+ 	 	 	 	"trans": "Короткий девиз, которая будет отображаться в чате",
  	 	 	 	"eng": "A short tag that will be displayed in chat"
  	 	 	}
  	 	},
@@ -5902,7 +5902,7 @@
  	 	},
  	 	"error": {
  	 	 	"noNameOrShortName": {
- 	 	 	 	"trans": "Пожалуйста, введите имя и тег",
+ 	 	 	 	"trans": "Пожалуйста, введите имя и девиз",
  	 	 	 	"eng": "Please enter a name and a tag"
  	 	 	}
  	 	}
@@ -5918,11 +5918,11 @@
  	 	 	"vars": [
  	 	 	 	"playerName"
  	 	 	],
- 	 	 	"trans": "Отчетность ${playerName}",
+ 	 	 	"trans": "Отчет ${playerName}",
  	 	 	"eng": "reporting ${playerName}"
  	 	},
  	 	"description": {
- 	 	 	"trans": "Отчет будет отправлен модераторам автоматически. \\ nplease не злоупотребляет, спамингом и не играйте с системой отчетов",
+ 	 	 	"trans": "Отчет будет отправлен модераторам автоматически. \\n Пожалуйста, не злоупотребляйте спамингом и не играйте с системой отчетов",
  	 	 	"eng": "Report will be sent to moderators automatically. \\nPlease do not misuses, spamming or play with the report system"
  	 	},
  	 	"textInput": {
@@ -5932,7 +5932,7 @@
  	 	 	}
  	 	},
  	 	"report": {
- 	 	 	"trans": "Сообщить и блокировать",
+ 	 	 	"trans": "Сообщить и заблокировать",
  	 	 	"eng": "report and block"
  	 	},
  	 	"error": {
